grammer.ebnf
program        = global_decl*
global_decl    = type ident "(" type ident ("," type ident)* ")" "{" stmt* "}"
               | struct_decl ";"
               | type ident ";"
               | enum_decl ";"
               | "typedef" (type | enum_decl) ident ";"
stmt           = expr ";"
               | "{" stmt* "}"
               | "if" "(" expr ")" stmt ("else" stmt)?
               | "while" "(" expr ")" stmt
               | "for" "(" expr? ";" expr? ";" expr? ")" stmt
               | "return" expr? ";"
               | "break" ";"
               | "continue" ";"
               | "switch" "(" expr ")" "{" ("case" constant ":" stmt*)* ("default" ":" stmt*)? "}"
expr           = local_decl
local_decl     = ternary
               | type ident ("=" ternary)? ("," ident ("=" ternary)? )*
               | type ident "[" num "]" ("=" "{" (ternary ("," ternary)*)? "}")?
               | type ident "[" "]" ("=" "{" (ternary ("," ternary)*)? "}")?
               | struct_decl ("=" "{" (ternary ("," ternary)*)? "}")?
ternary        = logical ("?" logical ":" logical)?
logical        = assign ("&&" assign | "||" assign)*
assign         = equality (("=" | "+=" | "-=" | "*=" | "/=") assign)?
equality       = relational ("==" relational | "!=" relational)*
relational     = add ("<" add | "<=" add | ">" add | ">=" add)*
add            = mul ("+" mul | "-" mul)*
mul            = unary ("*" unary | "/" unary)*
unary          = primary
               | "sizeof" (unary | type)
               | ("+" | "-")? primary
               | "!" primary
               | "++" primary
               | "--" primary
               | primary "++"
               | primary "--"
               | "&"* primary
               | "*"* primary
primary        = num
               | string+
               | "(" expr ")" primary_access*
               | "(" type ")" primary
               | ident ("(" (ternary ("," ternary)*)? ")")? primary_access*
primary_access = "[" logical "]"
               | "." ident
               | "->" ident 
struct_decl    = "struct" ident "{" (type ident ";")* "}"
enum_decl      = "enum" "{" ( ident "," )* "}" ";"
struct_type    = "struct" (ident | ident? "{" (type ident ";")* "}")
type           = ("int" | struct_type) "*"*
constant       = num | ident
